# mars_to_zarr

./: .gitignore  README.md  example.globalDT.yaml  example.hres.yaml  pyproject.toml
mars_to_zarr/: __main__.py  read_grib.py  read_source.py  retrieve_from_mars.py  write_to_zarr.py
