[project]
name = "mars-to-zarr"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kasper Hintz", email = "kah@dmi.dk"},
]
dependencies = [
    "ecmwf-api-client>=1.6.5",
    "xarray<=2024.11.0",
    "zarr<3",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "fsspec>=2025.3.2",
    "ecmwfspec @ git+https://github.com/observingClouds/ecmwfspec@main",
    #"gribscan @ git+https://github.com/ealerskans/gribscan@deode",
    "isodate>=0.7.2",
    "scipy>=1.15.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
gribscan = [
    "-e /home/ea/git/github/gribscan",
]

[tool.pdm]
distribution = false
