[project]
name = "mars-to-zarr"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kasper Hintz", email = "kah@dmi.dk"},
]
dependencies = [
    "ecmwf-api-client>=1.6.5",
    "xarray<=2024.11.0",
    "zarr<3",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "gribscan>=0.0.14",
    "fsspec>=2025.3.2",
    "ipdb>=0.13.13",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
